--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -372,6 +372,10 @@ a:hover {
   padding: 40px 0 60px;
 }
 
+.home .site-inner {
+  padding-top: 12px;
+}
+
 .site-inner > .wrap {
   padding: 0 24px;
 }
