Align site title with logo top edge

--- a/_includes/primary-nav.html
+++ b/_includes/primary-nav.html
@@ -1,6 +1,6 @@
 <div class="wrap">
   <div class="site-header-row row middle-xs between-xs">
-    <div class="title-area col col-xs-auto start-xs">
+    <div class="title-area col col-xs start-xs">
       <p class="site-title">
         <a href="{{ '/' | relative_url }}" class="custom-logo-link" rel="home">
           <img
@@ -10,19 +10,11 @@
           />
         </a>
       </p>
+      <div class="site-branding">
+        <p class="site-titel">The Ultimate Stabat Mater Website </p>
+        <p class="site-omschrijving">a musical journey through the ages</p>
+      </div>
       <p class="site-description screen-reader-text">a musical journey through the ages...</p>
-    </div>
-    <div class="header-right col col-xs text-xs-right">
-      <aside class="widget-area">
-        <section class="widget widget_text">
-          <div class="widget-wrap">
-            <div class="textwidget">
-              <p class="site-titel">The Ultimate Stabat Mater Website </p>
-              <p class="site-omschrijving">a musical journey through the ages</p>
-            </div>
-          </div>
-        </section>
-      </aside>
     </div>
   </div>
 </div>
