--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -38,10 +38,10 @@
     <div class="textwidget">
       <p>
         Search for composers:<br />
-        <a href="{{ '/composers/alphabetically/' | relative_url }}">Alphabetically</a><br />
-        <a href="{{ '/composers/countries-of-origin/' | relative_url }}">By countries of origin</a><br />
-        <a href="{{ '/composers/chronologically/' | relative_url }}">Chronologically</a><br />
-        <a href="{{ '/composers/duration/' | relative_url }}">By duration</a>
+        <a href="{{ '/composers/' | relative_url }}">Alphabetically</a><br />
+        <a href="{{ '/composers/' | relative_url }}">By countries of origin</a><br />
+        <a href="{{ '/composers/' | relative_url }}">Chronologically</a><br />
+        <a href="{{ '/composers/' | relative_url }}">By duration</a>
       </p>
     </div>
   </div>
