--- a/_includes/secondary-nav.html
+++ b/_includes/secondary-nav.html
@@ -1,23 +1,43 @@
+{% assign items = site.data.navigation.secondary | default: [] %}
+{% assign current_url = page.url | default: '/' %}
 <div class="wrap">
   <ul id="menu-hoofdmenu-1" class="menu genesis-nav-menu menu-secondary responsive-menu">
-    <li class="menu-item menu-item-home current-menu-item">
-      <a href="{{ '/' | relative_url }}" aria-current="page">Home</a>
-    </li>
-    <li class="menu-item menu-item-has-children">
-      <a href="{{ '/composers/' | relative_url }}">Composers</a>
-      <ul class="sub-menu">
-        <li class="menu-item"><a href="{{ '/composers/' | relative_url }}">Alphabetically</a></li>
-        <li class="menu-item"><a href="{{ '/composers/' | relative_url }}">By country of origin</a></li>
-        <li class="menu-item"><a href="{{ '/composers/' | relative_url }}">Chronologically</a></li>
-        <li class="menu-item"><a href="{{ '/composers/' | relative_url }}">By duration</a></li>
-      </ul>
-    </li>
-    <li class="menu-item"><a href="{{ '/stabat-mater-dolorosa-about-the-poem/' | relative_url }}">Texts</a></li>
-    <li class="menu-item"><a href="{{ '/stabat-mater-translations-and-languages/' | relative_url }}">Translations</a></li>
-    <li class="menu-item"><a href="{{ '/stabat-mater-blog/' | relative_url }}">Blog</a></li>
-    <li class="menu-item"><a href="{{ '/stabat-mater-cd-collection/' | relative_url }}">Missing CDs</a></li>
-    <li class="menu-item"><a href="{{ '/stabat-mater-foundation/' | relative_url }}">About</a></li>
-    <li class="menu-item"><a href="{{ '/stabat-mater-collection-support/' | relative_url }}">Donate?</a></li>
-    <li class="menu-item"><a href="{{ '/contact/' | relative_url }}">Contact</a></li>
+    {% for item in items %}
+      {% assign item_url = item.url | default: '#' %}
+      {% assign item_classes = 'menu-item' %}
+      {% assign is_active = false %}
+      {% if current_url == item_url %}
+        {% assign is_active = true %}
+      {% elsif current_url == item_url | append: 'index.html' %}
+        {% assign is_active = true %}
+      {% elsif page.collection == 'posts' and item.key == 'blog' %}
+        {% assign is_active = true %}
+      {% elsif item.children %}
+        {% for child in item.children %}
+          {% assign child_url = child.url | default: '' %}
+          {% if child_url != '' and current_url != '/' and current_url contains child_url %}
+            {% assign is_active = true %}
+          {% endif %}
+        {% endfor %}
+      {% endif %}
+      {% if item.children %}
+        {% assign item_classes = item_classes | append: ' menu-item-has-children' %}
+      {% endif %}
+      {% if is_active %}
+        {% assign item_classes = item_classes | append: ' current-menu-item' %}
+      {% endif %}
+      <li class="{{ item_classes | strip }}">
+        <a href="{{ item_url | relative_url }}"{% if is_active %} aria-current="page"{% endif %}>{{ item.title }}</a>
+        {% if item.children %}
+          <ul class="sub-menu">
+            {% for child in item.children %}
+              <li class="menu-item">
+                <a href="{{ child.url | relative_url }}">{{ child.title }}</a>
+              </li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </li>
+    {% endfor %}
   </ul>
 </div>
